k8s/overlays/prod/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blog
  name: blog
spec:
  type: LoadBalancer
  selector:
    app: blog
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
