k8s/overlays/prod/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: blog-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - digitalsoba.dev
    secretName: digitalsoba-dev-tls
  rules:
  - host: digitalsoba.dev
    http:
      paths:
      - backend:
          serviceName: blog
          servicePort: 80
